Done CRUD employee with firebase

--- a/src/app/components/employees/employees.component.html
+++ b/src/app/components/employees/employees.component.html
@@ -3,6 +3,6 @@
     <span>My Application</span>
   </mat-toolbar>
   <div class="">
-    <app-employee></app-employee>
+    <router-outlet></router-outlet>
   </div>
 </div>
