--- a/src/app/components/employees/employee/employee.component.html
+++ b/src/app/components/employees/employee/employee.component.html
@@ -1,4 +1,9 @@
-<form [formGroup]="form" (submit)="onSubmit()">
+<mat-toolbar [ngStyle]="{'justify-content': 'space-between'}">
+  <span>{{employeeService.form.get('$key')?.value ? 'Edit' : 'Create'}}</span>
+  <span class="fill-remaining-space"></span>
+  <button class="btn-dialog-close" mat-stroked-button (click)="onClose()" tabIndex="-1"><mat-icon>clear</mat-icon></button>
+</mat-toolbar>
+<form [formGroup]="employeeService.form" (submit)="onSubmit()">
   <mat-grid-list cols="2" rowHeight="300px">
     <mat-grid-tile>
       <div class="control-container">
@@ -13,8 +18,8 @@
         </mat-form-field>
         <mat-form-field>
           <input matInput formControlName="mobile" placeholder="Mobile">
-          <mat-error *ngIf="form.controls['mobile'].errors?.required">This field is mandatory.</mat-error>
-          <mat-error *ngIf="form.controls['mobile'].errors?.minlength">Minium 8 charactors needed.</mat-error>
+          <mat-error *ngIf="employeeService.form.controls['mobile'].errors?.required">This field is mandatory.</mat-error>
+          <mat-error *ngIf="employeeService.form.controls['mobile'].errors?.minlength">Minium 8 charactors needed.</mat-error>
         </mat-form-field>
         <mat-form-field>
           <input matInput formControlName="city" placeholder="City">
@@ -33,11 +38,12 @@
         <mat-form-field>
           <mat-select formControlName="department" placeholder="Department">
             <mat-option>None</mat-option>
-            <!-- <ng-container *ngFor="let department of departments">
-              <mat-option value="{{department.id}}">
+            <ng-container *ngFor="let department of departmentService.array">
+              {{department.$key}}
+              <mat-option value="{{department.$key}}">
                 {{department.value}}
               </mat-option>
-            </ng-container> -->
+            </ng-container>
           </mat-select>
         </mat-form-field>
         <mat-form-field>
@@ -49,7 +55,7 @@
           <mat-checkbox formControlName="isPermanent">Permanent Employee</mat-checkbox>
         </div>
         <div class="btn-row">
-          <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Submit</button>
+          <button mat-raised-button color="primary" type="submit" [disabled]="employeeService.form.invalid">Submit</button>
           <button mat-raised-button color="warn" (click)="onClear()">Clear</button>
         </div>
       </div>
